<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ListAlbumsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Label principal -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.uniandes.vinyls.ui.components.CustomTextView
                android:id="@+id/listado_albumes_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_albums_label"
                android:textSize="33sp"
                android:layout_marginBottom="20dp" />
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:alpha="0.5"
                android:layout_marginBottom="20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Campo de búsqueda -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            >
            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bar_background"
                android:hint="@string/filter_album"
                android:contentDescription="@string/filter_album"
                android:layout_marginBottom="20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Botones de ordenamiento -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order_genre_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musical_genre"
                android:background="@color/black"
                android:textColor="@color/white" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order_name_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_name_label"
                android:background="@drawable/rounded_button" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingTop="20sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/loadingProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAlbums"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Botón de agregar álbum -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20sp"
        android:paddingRight="20sp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_album"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:text="+"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"/>
<!--
        <TextView
            android:id="@+id/text_button_add_album"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingLeft="10dp"
            android:text="@string/add_album"
            android:textColor="@color/white"
            android:textSize="14sp" />
            -->
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
