...
    <string name="detalle_performers">Detalle Artistas</string>
    <string name="app_bar_collectors">Coleccionistas</string>
    <string name="menu_artists">Artistas</string>
    <string name="menu_detail_collector">Coleccionista</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="list_albums_label">Listado de álbumes</string>
    <string name="order_name_label">Nombre</string>
    <string name="add_album">Agregar álbum</string>
    <string name="add_track">Agregar canción</string>
    <string name="main_label">Vinilos</string>
    <string name="visitor_label">Visitante</string>
    <string name="collector_label">Coleccionista</string>
    <string name="album_created_successful">Álbum creado exitosamente</string>
    <string name="track_created_successful">Track creado exitosamente</string>
    <string name="error_creating_album">Error al crear álbum</string>
...
