<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/album_cover1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/cover_image"
            android:src="@mipmap/pruebaicono" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp">

            <TextView
                android:id="@+id/album_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Album Name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/album_genre1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Genre"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.5"
        android:background="@color/white" />

</LinearLayout>