...
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/go_to_collectors"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/imagen_go_to_collectors"
                    android:src="@mipmap/albumes"
                    android:layout_marginLeft="20dp"/>
...
