...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                        <TextView
                            android:id="@+id/detail_collector_name"
                            android:layout_width="match_parent"
                            android:layout_height="200sp"
                            android:textSize="40sp"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
...
